--- a/editor/styles.css
+++ b/editor/styles.css
@@ -24,12 +24,12 @@ h1 {
 }
 
 .introduction {
-  padding-top: 60px;
+  padding: 30px;
 }
 
 .links {
   font-size: 4em;
-  padding: 80px;
+  padding: 40px;
   text-align: center;
 }
 
@@ -46,6 +46,8 @@ h1 {
 
 a:link {
   color: white;
+  text-decoration: none;
+  border-bottom: 2px solid white;
 }
 
 a:visited {
